# aws-rag-deploy-main

./: .gitignore  README.md  create_db.py  pyproject.toml
src/: app_api_handler.py
src/rag_app/: get_chroma_db.py  get_embeddings.py  query_rag.py
