[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-app"
version = "0.1.0"
description = "RAG application using LangChain and AWS Bedrock"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.117",
    "fastapi>=0.111.0",
    "mangum>=0.17.0",
    "uvicorn>=0.30.0",
    "pypdf>=4.2.0",
    "chromadb>=0.5.0",
    "langchain>=0.2.1",
    "langchain-aws>=0.1.6",
    "langchain-community>=0.2.1",
    "langchain-text-splitters",
]

[tool.setuptools]
packages = ["src"]
